crates/backyard-parser/tests/snapshots/string__nowdoc.snap
---
source: crates/backyard-parser/tests/string.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: echo
    items:
      - node_type: now_doc
        label:
          - 83
          - 84
          - 65
          - 82
          - 84
        value:
          - 10
          - 97
          - 32
          - 123
          - 36
          - 97
          - 125
        loc:
          start:
            line: 1
            column: 5
            offset: 5
          end:
            line: 3
            column: 4
            offset: 27
        leadings: ~
        trailings: ~
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 3
        column: 4
        offset: 27
    leadings: ~
    trailings: ~
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 3
    column: 5
    offset: 28
leadings: ~
trailings: ~
