crates/backyard-parser/tests/snapshots/string__single_quote.snap
---
source: crates/backyard-parser/tests/string.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: assignment
    left:
      node_type: variable
      name:
        node_type: identifier
        name:
          - 97
        loc:
          start:
            line: 1
            column: 0
            offset: 0
          end:
            line: 1
            column: 1
            offset: 1
        leadings: ~
        trailings: ~
      loc:
        start:
          line: 1
          column: 0
          offset: 0
        end:
          line: 1
          column: 1
          offset: 1
      leadings: ~
      trailings: ~
    operator:
      - 61
    right:
      node_type: string
      quote: Single
      value:
        - 32
        - 105
        - 110
        - 105
        - 32
        - 115
        - 116
        - 114
        - 105
        - 110
        - 103
        - 32
        - 36
        - 32
        - 92
        - 34
        - 32
        - 92
        - 36
        - 118
        - 97
        - 114
        - 32
        - 36
        - 98
        - 32
        - 123
        - 36
        - 123
        - 34
        - 97
        - 108
        - 101
        - 34
        - 32
        - 46
        - 32
        - 53
        - 125
        - 125
        - 32
        - 123
        - 36
        - 97
        - 125
      loc:
        start:
          line: 1
          column: 5
          offset: 5
        end:
          line: 1
          column: 5
          offset: 5
      leadings: ~
      trailings: ~
    loc:
      start:
        line: 1
        column: 3
        offset: 3
      end:
        line: 1
        column: 5
        offset: 5
    leadings: ~
    trailings: ~
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 52
    offset: 52
leadings: ~
trailings: ~
